--- a/purchase_order_product_recommendation/i18n/purchase_order_product_recommendation.pot
+++ b/purchase_order_product_recommendation/i18n/purchase_order_product_recommendation.pot
@@ -247,6 +247,16 @@ msgid "Vendor"
 msgstr ""
 
 #. module: purchase_order_product_recommendation
+#: model:ir.model.fields,field_description:purchase_order_product_recommendation.field_purchase_order_recommendation_warehouse_ids
+msgid "Warehouse"
+msgstr ""
+
+#. module: purchase_order_product_recommendation
+#: model:ir.model.fields,field_description:purchase_order_product_recommendation.field_purchase_order_recommendation_warehouse_count
+msgid "Warehouse Count"
+msgstr ""
+
+#. module: purchase_order_product_recommendation
 #: model:ir.model.fields,field_description:purchase_order_product_recommendation.field_purchase_order_recommendation_line_wizard_id
 msgid "Wizard"
 msgstr ""
