--- a/purchase_triple_discount/i18n/sl.po
+++ b/purchase_triple_discount/i18n/sl.po
@@ -9,69 +9,70 @@ msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-24 07:53+0000\n"
-"PO-Revision-Date: 2017-11-24 07:53+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
+"PO-Revision-Date: 2021-02-24 11:45+0000\n"
+"Last-Translator: Matjaz Mozetic <matjaz@luxim.si>\n"
 "Language-Team: Slovenian (https://www.transifex.com/oca/teams/23907/sl/)\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
-"%100==4 ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
+"%100==4 ? 2 : 3;\n"
+"X-Generator: Weblate 4.3.2\n"
 
 #. module: purchase_triple_discount
 #: model:ir.model,name:purchase_triple_discount.model_res_partner
 msgid "Contact"
-msgstr ""
+msgstr "Stik"
 
 #. module: purchase_triple_discount
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_res_partner__default_supplierinfo_discount2
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_res_users__default_supplierinfo_discount2
 msgid "Default Supplier Discount 2 (%)"
-msgstr ""
+msgstr "Privzeti popust dobavitelja 2 (%)"
 
 #. module: purchase_triple_discount
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_res_partner__default_supplierinfo_discount3
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_res_users__default_supplierinfo_discount3
 msgid "Default Supplier Discount 3 (%)"
-msgstr ""
+msgstr "Privzeti popust dobavitelja 3 (%)"
 
 #. module: purchase_triple_discount
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_purchase_order_line__discount2
 msgid "Disc. 2 (%)"
-msgstr ""
+msgstr "Pop. 2(%)"
 
 #. module: purchase_triple_discount
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_purchase_order_line__discount3
 msgid "Disc. 3 (%)"
-msgstr ""
+msgstr "Pop. 3(%)"
 
 #. module: purchase_triple_discount
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_product_supplierinfo__discount2
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_purchase_report__discount2
 msgid "Discount 2 (%)"
-msgstr ""
+msgstr "Popust 2 (%)"
 
 #. module: purchase_triple_discount
 #: sql_constraint:purchase.order.line:0
 msgid "Discount 2 must be lower than 100%."
-msgstr ""
+msgstr "Popust 2 ne sme presegati 100%."
 
 #. module: purchase_triple_discount
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_product_supplierinfo__discount3
 #: model:ir.model.fields,field_description:purchase_triple_discount.field_purchase_report__discount3
 msgid "Discount 3 (%)"
-msgstr ""
+msgstr "Popust 3 (%)"
 
 #. module: purchase_triple_discount
 #: sql_constraint:purchase.order.line:0
 msgid "Discount 3 must be lower than 100%."
-msgstr ""
+msgstr "Popust 3 ne sme presegati 100%."
 
 #. module: purchase_triple_discount
 #: model:ir.model,name:purchase_triple_discount.model_account_invoice
 msgid "Invoice"
-msgstr ""
+msgstr "Račun"
 
 #. module: purchase_triple_discount
 #: model:ir.model,name:purchase_triple_discount.model_purchase_order_line
@@ -80,20 +81,18 @@ msgstr "Postavka nabavnega naloga"
 
 #. module: purchase_triple_discount
 #: model:ir.model,name:purchase_triple_discount.model_purchase_report
-#, fuzzy
-#| msgid "Purchase Order Line"
 msgid "Purchase Report"
-msgstr "Postavka nabavnega naloga"
+msgstr "Poročilo o nabavi"
 
 #. module: purchase_triple_discount
 #: model:ir.model,name:purchase_triple_discount.model_stock_rule
 msgid "Stock Rule"
-msgstr ""
+msgstr "Pravilo zaloge"
 
 #. module: purchase_triple_discount
 #: model:ir.model,name:purchase_triple_discount.model_product_supplierinfo
 msgid "Supplier Pricelist"
-msgstr ""
+msgstr "Cenik dobavitelja"
 
 #. module: purchase_triple_discount
 #: model:ir.model.fields,help:purchase_triple_discount.field_res_partner__default_supplierinfo_discount2
@@ -104,3 +103,5 @@ msgid ""
 "This value will be used as the default one, for each new supplierinfo line "
 "depending on that supplier."
 msgstr ""
+"Ta vrednost se bo uporabljala kot privzeta za vsako novo postavko "
+"\"supplierinfo\" vezano na tega dobavitelja."
