[MIG] purchase_landed_cost: Migration to 13.0

--- a/purchase_landed_cost/i18n/purchase_landed_cost.pot
+++ b/purchase_landed_cost/i18n/purchase_landed_cost.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* purchase_landed_cost
+# 	* purchase_landed_cost
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,31 +25,31 @@ msgstr ""
 
 #. module: purchase_landed_cost
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.purchase_cost_distribution_form
-msgid "Are you sure that you want to update product prices?"
+msgid "Are you sure that you want to set done state?"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.expense.type,calculation_method:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_expense_type__calculation_method__amount
 msgid "By amount of the line"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.expense.type,calculation_method:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_expense_type__calculation_method__price
 msgid "By product price"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.expense.type,calculation_method:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_expense_type__calculation_method__qty
 msgid "By product quantity"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.expense.type,calculation_method:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_expense_type__calculation_method__volume
 msgid "By product volume"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.expense.type,calculation_method:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_expense_type__calculation_method__weight
 msgid "By product weight"
 msgstr ""
 
@@ -59,7 +59,7 @@ msgid "Calculate"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.cost.distribution,state:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_cost_distribution__state__calculated
 msgid "Calculated"
 msgstr ""
 
@@ -78,8 +78,6 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.import_invoice_line_wizard_view
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.import_landed_cost_pickings_wizard_view
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.picking_import_wizard_view
-#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.purchase_cost_distribution_form
-#: selection:purchase.cost.distribution,state:0
 msgid "Cancel"
 msgstr ""
 
@@ -105,11 +103,6 @@ msgstr ""
 #. module: purchase_landed_cost
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.view_purchase_cost_distribution_line_form
 msgid "Cost Line Expenses"
-msgstr ""
-
-#. module: purchase_landed_cost
-#: model:ir.model.fields,field_description:purchase_landed_cost.field_purchase_cost_distribution__cost_update_type
-msgid "Cost Update Type"
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -148,12 +141,6 @@ msgstr ""
 #. module: purchase_landed_cost
 #: model:ir.model.fields,field_description:purchase_landed_cost.field_purchase_expense_type__note
 msgid "Cost documentation"
-msgstr ""
-
-#. module: purchase_landed_cost
-#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:308
-#, python-format
-msgid "Cost update cannot be undone because there has been a later update. Restore correct price and try again."
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -222,13 +209,9 @@ msgstr ""
 
 #. module: purchase_landed_cost
 #: model_terms:ir.actions.act_window,help:purchase_landed_cost.action_purchase_expense_type
-msgid "Define the type of the calculation of each purchase expense\n"
+msgid ""
+"Define the type of the calculation of each purchase expense\n"
 "                used for calculating the distribution between lines."
-msgstr ""
-
-#. module: purchase_landed_cost
-#: selection:purchase.cost.distribution,cost_update_type:0
-msgid "Direct Update"
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -264,12 +247,12 @@ msgid "Documentation for this order"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.cost.distribution,state:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_cost_distribution__state__done
 msgid "Done"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.cost.distribution,state:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_cost_distribution__state__draft
 msgid "Draft"
 msgstr ""
 
@@ -279,13 +262,8 @@ msgid "Duplicate expense"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: selection:purchase.expense.type,calculation_method:0
+#: model:ir.model.fields.selection,name:purchase_landed_cost.selection__purchase_expense_type__calculation_method__equal
 msgid "Equally to all lines"
-msgstr ""
-
-#. module: purchase_landed_cost
-#: selection:purchase.cost.distribution,state:0
-msgid "Error"
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -349,7 +327,9 @@ msgstr ""
 
 #. module: purchase_landed_cost
 #: model:ir.model.fields,help:purchase_landed_cost.field_purchase_expense_type__default_amount
-msgid "If set, this amount is put in the expense line when you select this expense type"
+msgid ""
+"If set, this amount is put in the expense line when you select this expense "
+"type"
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -360,7 +340,7 @@ msgid "Import"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.invoice_supplier_form
+#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.view_move_form
 msgid "Import from pickings"
 msgstr ""
 
@@ -403,15 +383,9 @@ msgid "Incoming shipments"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: model:ir.model,name:purchase_landed_cost.model_account_invoice
 #: model:ir.model.fields,field_description:purchase_landed_cost.field_import_invoice_line_wizard__invoice
 #: model:ir.model.fields,field_description:purchase_landed_cost.field_purchase_cost_distribution_expense__invoice_id
 msgid "Invoice"
-msgstr ""
-
-#. module: purchase_landed_cost
-#: model:ir.model,name:purchase_landed_cost.model_account_invoice_line
-msgid "Invoice Line"
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -420,10 +394,20 @@ msgid "Invoice line"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: model:ir.model.fields,field_description:purchase_landed_cost.field_account_invoice__expense_line_ids
-#: model:ir.model.fields,field_description:purchase_landed_cost.field_account_invoice_line__expense_line_ids
-#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.invoice_supplier_form
+#: model:ir.model,name:purchase_landed_cost.model_account_move
+msgid "Journal Entries"
+msgstr ""
+
+#. module: purchase_landed_cost
+#: model:ir.model,name:purchase_landed_cost.model_account_move_line
+msgid "Journal Item"
+msgstr ""
+
+#. module: purchase_landed_cost
+#: model:ir.model.fields,field_description:purchase_landed_cost.field_account_move__expense_line_ids
+#: model:ir.model.fields,field_description:purchase_landed_cost.field_account_move_line__expense_line_ids
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.purchase_order_form
+#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.view_move_form
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.view_picking_form
 msgid "Landed costs"
 msgstr ""
@@ -486,7 +470,7 @@ msgid "New cost"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:200
+#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:0
 #, python-format
 msgid "No valid distribution type."
 msgstr ""
@@ -524,7 +508,7 @@ msgid "Pickings"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:221
+#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:0
 #, python-format
 msgid "Please enter an amount for all the expenses"
 msgstr ""
@@ -630,7 +614,9 @@ msgstr ""
 
 #. module: purchase_landed_cost
 #: model:ir.model.fields,help:purchase_landed_cost.field_purchase_cost_distribution_expense__affected_lines
-msgid "Put here specific lines that this expense is going to be distributed across. Leave it blank to use all imported lines."
+msgid ""
+"Put here specific lines that this expense is going to be distributed across."
+" Leave it blank to use all imported lines."
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -655,7 +641,8 @@ msgstr ""
 
 #. module: purchase_landed_cost
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.import_landed_cost_pickings_wizard_view
-msgid "Select here the pickings for those you want to add their expenses lines."
+msgid ""
+"Select here the pickings for those you want to add their expenses lines."
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -669,8 +656,20 @@ msgid "Select supplier invoice line wizard"
 msgstr ""
 
 #. module: purchase_landed_cost
+#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.purchase_cost_distribution_form
+msgid "Set done"
+msgstr ""
+
+#. module: purchase_landed_cost
+#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.purchase_cost_distribution_form
+msgid "Set draft"
+msgstr ""
+
+#. module: purchase_landed_cost
 #: model:ir.model.fields,help:purchase_landed_cost.field_purchase_expense_type__default_expense
-msgid "Specify if the expense will be automatically added in a purchase cost distribution."
+msgid ""
+"Specify if the expense will be automatically added in a purchase cost "
+"distribution."
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -692,13 +691,18 @@ msgstr ""
 
 #. module: purchase_landed_cost
 #: model:ir.model.fields,help:purchase_landed_cost.field_purchase_cost_distribution_line__product_price_unit
-msgid "Technical field used to record the product cost set by the user during a picking confirmation (when costing method used is 'average price' or 'real'). Value given in company currency and in product uom."
+msgid ""
+"Technical field used to record the product cost set by the user during a "
+"picking confirmation (when costing method used is 'average price' or "
+"'real'). Value given in company currency and in product uom."
 msgstr ""
 
 #. module: purchase_landed_cost
-#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:206
+#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:0
 #, python-format
-msgid "The cost for the line '%s' can't be distributed because the calculation method doesn't provide valid data"
+msgid ""
+"The cost for the line '%s' can't be distributed because the calculation "
+"method doesn't provide valid data"
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -722,14 +726,9 @@ msgid "The volume in m3."
 msgstr ""
 
 #. module: purchase_landed_cost
-#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:225
+#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:0
 #, python-format
 msgid "There is no picking lines in the distribution"
-msgstr ""
-
-#. module: purchase_landed_cost
-#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.purchase_cost_distribution_form
-msgid "This will undo the product price update (only if current value matches with the calculated price in this distribution). Do you want to continue?"
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -794,19 +793,16 @@ msgid "Unit price"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: model_terms:ir.ui.view,arch_db:purchase_landed_cost.purchase_cost_distribution_form
-msgid "Update Cost"
-msgstr ""
-
-#. module: purchase_landed_cost
 #: model_terms:ir.actions.act_window,help:purchase_landed_cost.action_purchase_cost_distribution
-msgid "Use this menu to control the cost of purchases by expense type\n"
+msgid ""
+"Use this menu to control the cost of purchases by expense type\n"
 "                such as transport, insurance, freight customs, etc."
 msgstr ""
 
 #. module: purchase_landed_cost
 #: model_terms:ir.actions.act_window,help:purchase_landed_cost.action_purchase_expense_type
-msgid "Use this menu to create types of purchase expenses.\n"
+msgid ""
+"Use this menu to create types of purchase expenses.\n"
 "                The types marked by default will be added to the cost\n"
 "                distribution automatically."
 msgstr ""
@@ -823,7 +819,8 @@ msgstr ""
 
 #. module: purchase_landed_cost
 #: model_terms:ir.actions.act_window,help:purchase_landed_cost.action_purchase_cost_distribution
-msgid "You can add one or more receipts which share the same expenses\n"
+msgid ""
+"You can add one or more receipts which share the same expenses\n"
 "                and update cost price of product."
 msgstr ""
 
@@ -833,15 +830,16 @@ msgid "You can find a vendor by its Name, TIN, Email or Internal Reference."
 msgstr ""
 
 #. module: purchase_landed_cost
-#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:132
+#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:0
 #, python-format
 msgid "You can't delete a confirmed cost distribution"
 msgstr ""
 
 #. module: purchase_landed_cost
-#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:153
+#: code:addons/purchase_landed_cost/models/purchase_cost_distribution.py:0
 #, python-format
-msgid "You can't delete a cost line if it's an affected line of any expense line."
+msgid ""
+"You can't delete a cost line if it's an affected line of any expense line."
 msgstr ""
 
 #. module: purchase_landed_cost
@@ -850,4 +848,3 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:purchase_landed_cost.picking_import_wizard_view
 msgid "or"
 msgstr ""
-
