--- a/purchase_partner_selectable_option/i18n/purchase_partner_selectable_option.pot
+++ b/purchase_partner_selectable_option/i18n/purchase_partner_selectable_option.pot
@@ -19,6 +19,11 @@ msgid "Contact"
 msgstr ""
 
 #. module: purchase_partner_selectable_option
+#: model:ir.model,name:purchase_partner_selectable_option.model_purchase_order
+msgid "Purchase Order"
+msgstr ""
+
+#. module: purchase_partner_selectable_option
 #: model_terms:ir.ui.view,arch_db:purchase_partner_selectable_option.view_partner_form
 msgid "Selectable in orders"
 msgstr ""
