--- a/purchase_blanket_order/i18n/purchase_blanket_order.pot
+++ b/purchase_blanket_order/i18n/purchase_blanket_order.pot
@@ -4,8 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0+e\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2023-05-29 10:57+0000\n"
+"PO-Revision-Date: 2023-05-29 10:57+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -79,6 +81,7 @@ msgid "Activity Type Icon"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/wizard/create_purchase_orders.py:0
 #, python-format
 msgid "All lines have already been completed."
@@ -90,6 +93,7 @@ msgid "Amount"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/wizard/create_purchase_orders.py:0
 #, python-format
 msgid "An order can't be empty"
@@ -141,6 +145,7 @@ msgid "Blanket Orders"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/wizard/create_purchase_orders.py:0
 #, python-format
 msgid ""
@@ -160,6 +165,7 @@ msgid "Cancelled"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/purchase_order.py:0
 #, python-format
 msgid ""
@@ -177,6 +183,11 @@ msgstr ""
 #: model:ir.model.fields,field_description:purchase_blanket_order.field_purchase_blanket_order__company_id
 #: model:ir.model.fields,field_description:purchase_blanket_order.field_purchase_blanket_order_line__company_id
 msgid "Company"
+msgstr ""
+
+#. module: purchase_blanket_order
+#: model:ir.model,name:purchase_blanket_order.model_res_config_settings
+msgid "Config Settings"
 msgstr ""
 
 #. module: purchase_blanket_order
@@ -229,6 +240,7 @@ msgid "Currency"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "Date Scheduled"
@@ -282,7 +294,6 @@ msgstr ""
 #. module: purchase_blanket_order
 #: model:ir.actions.server,name:purchase_blanket_order.expired_purchase_blanket_orders_cron_ir_actions_server
 #: model:ir.cron,cron_name:purchase_blanket_order.expired_purchase_blanket_orders_cron
-#: model:ir.cron,name:purchase_blanket_order.expired_purchase_blanket_orders_cron
 msgid "Expire Blanket Orders"
 msgstr ""
 
@@ -342,9 +353,7 @@ msgstr ""
 
 #. module: purchase_blanket_order
 #: model:ir.model.fields,help:purchase_blanket_order.field_purchase_blanket_order__message_needaction
-#: model:ir.model.fields,help:purchase_blanket_order.field_purchase_blanket_order__message_unread
 #: model:ir.model.fields,help:purchase_blanket_order.field_purchase_blanket_order_line__message_needaction
-#: model:ir.model.fields,help:purchase_blanket_order.field_purchase_blanket_order_line__message_unread
 msgid "If checked, new messages require your attention."
 msgstr ""
 
@@ -422,6 +431,7 @@ msgid "Messages"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "Must have some lines"
@@ -486,12 +496,6 @@ msgid "Number of messages with delivery error"
 msgstr ""
 
 #. module: purchase_blanket_order
-#: model:ir.model.fields,help:purchase_blanket_order.field_purchase_blanket_order__message_unread_counter
-#: model:ir.model.fields,help:purchase_blanket_order.field_purchase_blanket_order_line__message_unread_counter
-msgid "Number of unread messages"
-msgstr ""
-
-#. module: purchase_blanket_order
 #: model:ir.model.fields.selection,name:purchase_blanket_order.selection__purchase_blanket_order__state__open
 #: model_terms:ir.ui.view,arch_db:purchase_blanket_order.view_purchase_blanket_order_search
 msgid "Open"
@@ -543,6 +547,7 @@ msgid "Original quantity"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "Partner is mandatory"
@@ -561,14 +566,10 @@ msgid "Price"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "Price must be greater than zero"
-msgstr ""
-
-#. module: purchase_blanket_order
-#: model:ir.model,name:purchase_blanket_order.model_res_config_settings
-msgid "Procurement purchase grouping settings"
 msgstr ""
 
 #. module: purchase_blanket_order
@@ -586,6 +587,7 @@ msgid "Purchase Blanket Order"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/wizard/create_purchase_orders.py:0
 #, python-format
 msgid "Purchase Blanket Order %s is not open"
@@ -630,6 +632,7 @@ msgid "Purchase Order Lines"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "Quantity must be greater than zero"
@@ -641,6 +644,7 @@ msgid "Quantity to Order"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/wizard/create_purchase_orders.py:0
 #, python-format
 msgid "RFQ"
@@ -698,6 +702,7 @@ msgid "SMS Delivery error"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/purchase_order.py:0
 #, python-format
 msgid ""
@@ -771,6 +776,7 @@ msgid "Terms and Conditions"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/purchase_order.py:0
 #: code:addons/purchase_blanket_order/models/purchase_order.py:0
 #, python-format
@@ -780,6 +786,7 @@ msgid ""
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/purchase_order.py:0
 #, python-format
 msgid "The vendor must be equal to the blanket order lines vendor"
@@ -814,18 +821,6 @@ msgid "Unit of Measure"
 msgstr ""
 
 #. module: purchase_blanket_order
-#: model:ir.model.fields,field_description:purchase_blanket_order.field_purchase_blanket_order__message_unread
-#: model:ir.model.fields,field_description:purchase_blanket_order.field_purchase_blanket_order_line__message_unread
-msgid "Unread Messages"
-msgstr ""
-
-#. module: purchase_blanket_order
-#: model:ir.model.fields,field_description:purchase_blanket_order.field_purchase_blanket_order__message_unread_counter
-#: model:ir.model.fields,field_description:purchase_blanket_order.field_purchase_blanket_order_line__message_unread_counter
-msgid "Unread Messages Counter"
-msgstr ""
-
-#. module: purchase_blanket_order
 #: model:ir.model.fields,field_description:purchase_blanket_order.field_purchase_blanket_order__amount_untaxed
 msgid "Untaxed Amount"
 msgstr ""
@@ -849,12 +844,14 @@ msgid "Validity Date"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "Validity date is mandatory"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "Validity date must be in the future"
@@ -890,6 +887,7 @@ msgid "Wizard"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid ""
@@ -898,30 +896,35 @@ msgid ""
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "You can not delete an open blanket order! Try to cancel it before."
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/wizard/create_purchase_orders.py:0
 #, python-format
 msgid "You can't create a purchase order from an expired blanket order!"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/wizard/create_purchase_orders.py:0
 #, python-format
 msgid "You can't order more than the remaining quantities"
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/wizard/create_purchase_orders.py:0
 #, python-format
 msgid "You have to select lines from the same company."
 msgstr ""
 
 #. module: purchase_blanket_order
+#. odoo-python
 #: code:addons/purchase_blanket_order/models/blanket_orders.py:0
 #, python-format
 msgid "remaining"
