--- a/purchase_substate/i18n/purchase_substate.pot
+++ b/purchase_substate/i18n/purchase_substate.pot
@@ -4,8 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2023-06-22 09:02+0000\n"
+"PO-Revision-Date: 2023-06-22 09:02+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -17,12 +19,12 @@ msgstr ""
 #: model:mail.template,body_html:purchase_substate.mail_template_data_purchase_substate_wait_docs
 msgid ""
 "<div>\n"
-"    Dear ${object.partner_id.name or 'customer'},<br/>\n"
-"    Thank you for your order.<br/>\n"
+"    Dear ${object.partner_id.name or 'customer'},<br>\n"
+"    Thank you for your order.<br>\n"
 "        In order to validate your order we need the legal documentation.\n"
-"       <br/><br/>\n"
+"       <br><br>\n"
 "    Thank you,\n"
-"    <br/>\n"
+"    <br>\n"
 "</div>\n"
 "        "
 msgstr ""
@@ -31,13 +33,13 @@ msgstr ""
 #: model:mail.template,body_html:purchase_substate.mail_template_data_purchase_substate_delivery
 msgid ""
 "<div>\n"
-"    Dear ${object.partner_id.name or 'customer'},<br/>\n"
-"    Thank you for your order.<br/>\n"
+"    Dear ${object.partner_id.name or 'customer'},<br>\n"
+"    Thank you for your order.<br>\n"
 "        You order is being prepared for delivery.\n"
 "        You will receive a delivery tracking link to follow your delivery.\n"
-"    <br/><br/>\n"
+"    <br><br>\n"
 "    Thank you,\n"
-"    <br/>\n"
+"    <br>\n"
 "</div>\n"
 "        "
 msgstr ""
