--- a/purchase_fop_shipping/i18n/purchase_fop_shipping.pot
+++ b/purchase_fop_shipping/i18n/purchase_fop_shipping.pot
@@ -4,8 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2023-06-22 11:28+0000\n"
+"PO-Revision-Date: 2023-06-22 11:28+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -67,6 +69,7 @@ msgid "Purchase Order"
 msgstr ""
 
 #. module: purchase_fop_shipping
+#. odoo-python
 #: code:addons/purchase_fop_shipping/models/purchase.py:0
 #, python-format
 msgid ""
