--- a/purchase_security/i18n/es.po
+++ b/purchase_security/i18n/es.po
@@ -7,30 +7,32 @@ msgstr ""
 "Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-06-23 09:35+0000\n"
-"PO-Revision-Date: 2023-06-23 09:35+0000\n"
+"PO-Revision-Date: 2023-06-23 11:36+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. module: purchase_security
 #: model:res.groups,name:purchase_security.group_purchase_group_orders
 msgid "Group Purchase Users"
-msgstr ""
+msgstr "Grupo de usuarios de compras"
 
 #. module: purchase_security
 #: model:ir.model.fields,field_description:purchase_security.field_purchase_order__purchase_group_ids
 msgid "Purchase Group"
-msgstr ""
+msgstr "Grupo de compra"
 
 #. module: purchase_security
 #: model:ir.model,name:purchase_security.model_purchase_order
 msgid "Purchase Order"
-msgstr ""
+msgstr "Pedido de compra"
 
 #. module: purchase_security
 #: model:res.groups,name:purchase_security.group_purchase_own_orders
 msgid "User (own orders)"
-msgstr ""
+msgstr "Usuario (pedidos propios)"
