--- a/product_supplierinfo_qty_multiplier/i18n/fr.po
+++ b/product_supplierinfo_qty_multiplier/i18n/fr.po
@@ -4,13 +4,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-07 23:16+0000\n"
-"PO-Revision-Date: 2023-03-07 23:16+0000\n"
-"Last-Translator: <>\n"
+"POT-Creation-Date: 2023-12-18 10:04+0000\n"
+"PO-Revision-Date: 2023-12-18 10:04+0000\n"
+"Last-Translator: \n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -24,7 +23,7 @@ msgstr "Conditionnement"
 #. module: product_supplierinfo_qty_multiplier
 #: model:ir.model,name:product_supplierinfo_qty_multiplier.model_purchase_order_line
 msgid "Purchase Order Line"
-msgstr "Ligne de commande d'achat"
+msgstr "Ligne de bon de commande"
 
 #. module: product_supplierinfo_qty_multiplier
 #: model:ir.model,name:product_supplierinfo_qty_multiplier.model_product_supplierinfo
@@ -32,17 +31,19 @@ msgid "Supplier Pricelist"
 msgstr "Liste de prix du fournisseur"
 
 #. module: product_supplierinfo_qty_multiplier
-#: code:addons/product_supplierinfo_qty_multiplier/models/purchase_order_line.py:39
+#. odoo-python
+#: code:addons/product_supplierinfo_qty_multiplier/models/purchase_order_line.py:0
 #, python-format
 msgid ""
-"The selected supplier only sells this product by %s %s.\n"
-"The quantity has been automatically changed to %s %s"
+"The selected supplier only sells this product by %(multiplier_qty)s %(uom_name)s.\n"
+"The quantity has been automatically changed to %(new_product_qty)s %(uom_name)s."
 msgstr ""
-"Le fournisseur sélectionné vend seulement ce produit par %s %s.\n"
-"La quantité a été automatiquement changé par %s %s"
+"Le fournisseur sélectionné vend seulement ce produit par %(multiplier_qty)s %(uom_name)s.\n"
+"La quantité a été automatiquement changé par %(new_product_qty)s %(uom_name)s."
 
 #. module: product_supplierinfo_qty_multiplier
-#: code:addons/product_supplierinfo_qty_multiplier/models/purchase_order_line.py:48
+#. odoo-python
+#: code:addons/product_supplierinfo_qty_multiplier/models/purchase_order_line.py:0
 #, python-format
 msgid "Warning"
 msgstr "Attention"
