--- a/product_supplierinfo_qty_multiplier/i18n/product_supplierinfo_qty_multiplier.pot
+++ b/product_supplierinfo_qty_multiplier/i18n/product_supplierinfo_qty_multiplier.pot
@@ -1,12 +1,14 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* product_supplierinfo_qty_multiplier
+#   * product_supplierinfo_qty_multiplier
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"POT-Creation-Date: 2023-12-18 08:26+0000\n"
+"PO-Revision-Date: 2023-12-18 08:26+0000\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,15 +31,17 @@ msgid "Supplier Pricelist"
 msgstr ""
 
 #. module: product_supplierinfo_qty_multiplier
-#: code:addons/product_supplierinfo_qty_multiplier/models/purchase_order_line.py:39
+#. odoo-python
+#: code:addons/product_supplierinfo_qty_multiplier/models/purchase_order_line.py:0
 #, python-format
-msgid "The selected supplier only sells this product by %s %s.\n"
-"The quantity has been automatically changed to %s %s"
+msgid ""
+"The selected supplier only sells this product by %(multiplier_qty)s %(uom_name)s.\n"
+"The quantity has been automatically changed to %(new_product_qty)s %(uom_name)s."
 msgstr ""
 
 #. module: product_supplierinfo_qty_multiplier
-#: code:addons/product_supplierinfo_qty_multiplier/models/purchase_order_line.py:48
+#. odoo-python
+#: code:addons/product_supplierinfo_qty_multiplier/models/purchase_order_line.py:0
 #, python-format
 msgid "Warning"
 msgstr ""
-
